# bf-client

./: .bazelrc  .pre-commit-config.yaml  BUILD  BUILD.buildfarm  CONTRIBUTING.md  MODULE.bazel  WORKSPACE  deps.bzl  extensions.bzl  go.mod  go.sum  main.go  underline.diff
.github/workflows/: pr-build.yml
client/: BUILD  app.go  bytestream.go  cas.go  digest.go  document.go  hasher.go  hashtag.go  list.go  operation.go  paragraph.go  queue.go  tree.go  unified_redis.go
view/: BUILD  action.go  command.go  document.go  input.go  operation.go  operation_list.go  queue.go  search.go  search_results.go  settings.go  test.go  util.go  view.go  worker.go
